# parsing-encar

./: .env.example  .gitignore  CHANGES_RU.md  Dockerfile  Makefile  PROJECT_REPORT.md  catalog_test.xlsx  docker-compose.yml  mockup.html  models.yaml  pool-report.txt  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_accident_report_available.py  0003_is_primary.py  0004_model_overrides.py
deploy/: encar.env.example
deploy/lib/: common.sh
docker/cron/: crontab  entrypoint.sh
docs/encar/: field-map.md
docs/superpowers/plans/: 2026-06-15-encar-parser.md  2026-06-18-vps-deployment.md
docs/superpowers/specs/: 2026-06-15-encar-parser-design.md
encar_parser/: __main__.py  backfill.py  brand_display.py  build_pool.py  car_type.py  cli.py  config.py  dedup.py  encar_url.py  memlog.py  photos.py  pipeline.py  plan.py  scheduler.py  translations.py  validate_pool.py
encar_parser/db/: __init__.py  models.py  repository.py  session.py
encar_parser/fetchers/: __init__.py  api.py  base.py  browser.py  factory.py
encar_parser/parsers/: __init__.py  details.py  list_page.py
encar_parser/utils/: log.py  rate_limit.py  ua.py
encar_parser/web/: __init__.py  app.py  img_proxy.py  links.py
encar_parser/web/templates/: base.html  cars.html  categories.html  history.html  index.html  parsing.html  settings.html
output/: build_export.py  download_photos.py
scripts/: diagnose_memory.py  test_parse_5_models.py
tests/e2e/: test_smoke_live.py
tests/integration/: test_pipeline.py  test_web_app.py  test_web_crm_routes.py  test_web_filters_and_overrides.py
tests/unit/: test_api_fetcher.py  test_api_fetcher_retry.py  test_backfill.py  test_brand_display.py  test_browser_fetcher.py  test_build_pool.py  test_car_type.py  test_config.py  test_db_models.py  test_dedup.py  test_encar_url.py  test_fetcher_factory.py  test_fetcher_protocol.py  test_img_proxy.py  test_memlog.py  test_parsers.py  test_photos.py  test_pipeline_url.py  test_plan.py  test_plan_url.py  test_rate_limit.py  test_repository.py  test_scheduler.py  test_translations.py  test_ua.py  test_web_links.py
