[project]
name = "encar-parser"
version = "0.1.0"
description = "Parser for encar.com car listings"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "playwright>=1.47",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "structlog>=24.1",
    "tenacity>=9.0",
    "typer>=0.12",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "ruff>=0.5",
    "mypy>=1.10",
    "aiosqlite>=0.22.1",
    "types-PyYAML>=6.0",
    "openpyxl>=3.1",
    "pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["encar_parser"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Default to skipping live tests so CI doesn't accidentally hit the real API.
# Override with `pytest -m live` (CLI -m wins over addopts).
addopts = "-v --strict-markers -m 'not live'"
markers = [
    "live: tests that hit real encar.com",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "C4", "PT", "RET", "SIM"]
